Update config_file.cfg 4

--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
-# UI Configurations - 3
-TITLE = 'Azure Voting App'
+# UI Configurations - 4
+TITLE = 'Azure Voting App 4'
 VOTE1VALUE = 'Blue'
 VOTE2VALUE = 'Purple'
 SHOWHOST = 'false'
