Update config_file.cfg 5

--- a/azure-vote/azure-vote/config_file.cfg
+++ b/azure-vote/azure-vote/config_file.cfg
@@ -1,5 +1,5 @@
-# UI Configurations - 4
-TITLE = 'Azure Voting App 4'
-VOTE1VALUE = 'Blue'
-VOTE2VALUE = 'Purple'
+# UI Configurations - 5
+TITLE = 'Azure Voting App 5'
+VOTE1VALUE = 'Orange'
+VOTE2VALUE = 'Orange'
 SHOWHOST = 'false'
